dev/happy/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: web
  namespace: happy
  annotations:
    external-dns.alpha.kubernetes.io/target: 202.215.58.76
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`happy.mtaku3.com`)
      kind: Rule
      services:
        - name: happy-server
          port: http
  tls:
    secretName: web-tls-cert
